---------------------------------------------------------------------------------------------------
Version: 1.2.13
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.2.12
Date: 2025-03-03
  Graphics:
    - Fixed positioning of corner icons in discovery technologies.
  Locale:
    - Russian locale update.
---------------------------------------------------------------------------------------------------
Version: 1.2.11
Date: 2025-02-26
  Changes:
    - Fixed a crash on missing 'deepcopy' field.
---------------------------------------------------------------------------------------------------
Version: 1.2.9
Date: 2025-02-24
  Changes:
    - Added an icon intended to represent item and recipes used only in ResearchProgressProducts.
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 2025-02-18
  Locale:
    - French localization added.
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: 2025-02-18
  Changes:
    - Hidden optional dependency added for Cosmic Social Distancing.
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 2025-02-07
  Changes:
    - No longer write 'Space Locations' in the remote view planet GUI. Space locations isn't technically correct here.
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 2025-02-05
  Changes:
    - Fixed the API technology_icon_constant_planet.
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 2025-02-05
  Changes:
    - New thumbnail.
    - Image size compression.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2025-02-04