@@ -2,6 +2,7 @@
 Version: 1.2.13
 Date: ????
   Changes:
+    - Compatibility fix to handle the case where the vanilla lab has duplicate science packs listed in its inputs.
 ---------------------------------------------------------------------------------------------------
 Version: 1.2.12
 Date: 2025-03-03
